--- a/style.css
+++ b/style.css
@@ -285,9 +285,7 @@ input[type="range"]:focus{
   border-radius:50%;
   margin-top:-10px;
   padding:5px;
-  box-shadow: 5px 5px 15px rgba(35,71,92,0.15),
-             -5px -5px 15px rgba(255,255,255,1);
-
+  box-shadow: 0px 5px 15px rgba(35,71,92,0.2);
 }
 .slider[type="range"]::-webkit-slider-runnable-track {
   background:#15a6f3;
@@ -364,6 +362,7 @@ input[type="range"]:focus{
 }
 .dropdown select:focus,active:active{
   outline:0;
+  border:0;
 }
 .button2{
   width:160px;
